@@ -5,6 +5,9 @@ Bug tracker at http://code.google.com/p/psutil/issues
 
 NEW FEATURES
 
+ * Issue 198: Process.wait(timeout=0) can now be used to make wait() return
+   immediately.
+
 BUGFIXES
 
  * Issue 188: (Linux) psutil import error on Linux ARM architectures.
